@@ -65,6 +65,7 @@ main (int argc, char **argv)
 	};
 
         bindtextdomain (PACKAGE, GNOMELOCALEDIR);
+	bind_textdomain_codeset (PACKAGE, "UTF-8");
         textdomain (PACKAGE);
 
 	gnome_program_init ("control-center", VERSION, LIBGNOMEUI_MODULE,
